[project]
name = "test-jrpj-local"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pulumi>=3.0",
    "pulumi-cloudflare>=5.0",
    "pulumi-docker>=4.0",
    "pulumi-command>=1.0",
    "richmond-shared",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.uv.sources]
richmond-shared = { path = "../shared" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
